<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/channelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_channel_name" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/labelSelectServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_select_server"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/serverListSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_select_server" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_channel_create" />

        <CheckBox
            android:id="@+id/cbPrivateChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:text="@string/cb_private_channel" />

        <EditText
            android:id="@+id/privateChannelMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnCreate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/cbPrivateChannel"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnSelectMembers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/cbPrivateChannel"
            android:layout_alignBottom="@+id/cbPrivateChannel"
            android:layout_alignParentRight="true"
            android:text="@string/btn_add_member"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>